<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="app_name">Violet Note</string>
    <string name="onedrive_client_id" tools:ignore="TypographyDashes">8ed347b1-d21c-4f8d-bdc4-6e53e17f120d</string>
    <string name="ok">OK</string>
    <string name="cancel">Cancel</string>
    <string name="password">Password</string>
    <string name="password_required">Password required</string>
    <string name="caption_processing">Processing &#8230;</string>
    <string name="caption_loading">Loading &#8230;</string>
    <string name="hint_search">Search &#8230;</string>
    <string name="hint_add">Add &#8230;</string>
    <string name="hint_name">Name &#8230;</string>
    <string name="hint_value">Value &#8230;</string>
    <string name="hint_title">Title &#8230;</string>
    <string name="layout_notes_count">Notes : %d</string>
    <string name="action_refresh">Refresh</string>
    <string name="action_settings">Settings</string>
    <string name="action_search">Search</string>
    <string name="action_add">Add</string>
    <string name="action_edit">Edit</string>
    <string name="action_edit_value">Edit value</string>
    <string name="action_delete">Delete</string>
    <string name="action_duplicate">Duplicate</string>
    <string name="action_move_up">Move up</string>
    <string name="action_move_top">Move top</string>
    <string name="action_move_down">Move down</string>
    <string name="action_move_bottom">Move bottom</string>
    <string name="action_priority_up">Priority up</string>
    <string name="action_priority_down">Priority down</string>
    <string name="action_checkout">Checkout</string>
    <string name="action_check_all">Check all</string>
    <string name="action_uncheck_all">Uncheck all</string>
    <string name="action_history">History</string>
    <string name="action_reload">Reload</string>
    <string name="action_select">Select</string>
    <string name="action_select_all">Select all</string>
    <string name="action_move_other">Move to other</string>
    <string name="action_restore">Restore</string>
    <string name="pref_title_pass_note_data">Password Notes Data</string>
    <string name="pref_title_basic_note_data">Basic Notes Data</string>
    <string name="pref_title_local_backup">Local backup</string>
    <string name="pref_title_basic_note_backup">Backup</string>
    <string name="pref_summary_basic_note_backup">Backup to local storage</string>
    <string name="pref_title_basic_note_restore">Restore</string>
    <string name="pref_summary_basic_note_restore">Restore from local storage</string>
    <string name="pref_title_cloud_backup">Cloud backup</string>
    <string name="pref_title_basic_note_cloud_storage_type">Cloud storage</string>
    <string name="pref_summary_basic_note_cloud_storage_type">Type of cloud storage</string>
    <string name="pref_title_basic_note_cloud_backup">Backup</string>
    <string name="pref_summary_basic_note_cloud_backup">Backup to cloud</string>
    <string name="pref_title_basic_note_cloud_restore">Restore</string>
    <string name="pref_summary_basic_note_cloud_restore">Restore from cloud</string>
    <string name="pref_title_account">Account</string>
    <string name="pref_title_account_onedrive">OneDrive</string>
    <string name="pref_title_account_msgraph">MSGraph</string>
    <string name="pref_title_account_gdrive">Google Drive</string>
    <string name="pref_title_interface">Interface</string>
    <string name="pref_title_interface_basic_note_groups">Basic note groups</string>
    <string name="pref_title_interface_checked_last">Display checked items last</string>
    <string name="pref_title_interface_checked_update_interval">Checked display auto update</string>
    <string name="pref_title_miscellaneous">Miscellaneous</string>
    <string name="pref_title_miscellaneous_logging">Logging</string>
    <string-array name="pref_checked_update_interval_entries">
        <item>Off</item>
        <item>1 second</item>
        <item>2 seconds</item>
        <item>3 seconds</item>
        <item>5 seconds</item>
        <item>7 seconds</item>
        <item>10 seconds</item>
    </string-array>
    <string-array name="pref_checked_update_interval_entry_values">
        <item>0</item>
        <item>1</item>
        <item>2</item>
        <item>3</item>
        <item>5</item>
        <item>7</item>
        <item>10</item>
    </string-array>
    <string name="pref_title_source_type">Source type</string>
    <string name="pref_title_source_path">Remote path</string>
    <string name="pref_title_load">Load</string>
    <string name="pref_title_delete">Delete</string>
    <string-array name="pref_source_type_entries">
        <item>Local storage</item>
        <item>OneDrive</item>
    </string-array>
    <string-array name="pref_cloud_storage_entries">
        <item>OneDrive</item>
        <item>Google Drive</item>
    </string-array>
    <string name="pref_message_last_loaded_never">Last loaded: Never</string>
    <string name="pref_message_last_loaded_format">Last loaded: %s</string>
    <string name="pref_interface_hide_category_details">Hide category details</string>
    <string name="error_empty_password">Empty password</string>
    <string name="error_file_not_found">File not found</string>
    <string name="error_io">I/O error</string>
    <string name="error_crypt">Cryptography error</string>
    <string name="error_read">Data read error</string>
    <string name="error_load">Load error</string>
    <string name="error_load_remote_path_empty">Remote path is empty</string>
    <string name="error_field_not_empty">Field should not be empty</string>
    <string name="error_backup">Error creating backup</string>
    <string name="error_restore">Error restoring backup</string>
    <string name="error_load_process_running">Load process is running</string>
    <string name="error_internet_not_available">Internet connection is not available</string>
    <string name="error_onedrive_login">Error logging in to OneDrive: %s</string>
    <string name="error_onedrive_logout">Error logging out from OneDrive: %s</string>
    <string name="error_gdrive_login">Error logging in to Google Drive: %s</string>
    <string name="error_gdrive_logout">Error logging out from Google Drive: %s</string>
    <string name="message_backup_created">Successfully created backup at %s</string>
    <string name="message_backup_restored">Successfully restored backup from %s</string>
    <string name="message_backup_cloud_restored">Successfully restored backup from cloud</string>
    <string name="message_onedrive_successfully_logged_in">Successfully logged in to OneDrive</string>
    <string name="message_onedrive_successfully_logged_out">Successfully logged out from OneDrive</string>
    <string name="message_gdrive_successfully_logged_in">Successfully logged in to Google Drive</string>
    <string name="message_gdrive_successfully_logged_out">Successfully logged out from Google Drive</string>
    <string name="notification_onedrive_backup_completed">OneDrive backup has been completed</string>
    <string name="notification_gdrive_backup_completed">Google Drive backup has been completed</string>
    <string name="notification_password_notes_data_load_completed">Password notes data has been successfully loaded
    </string>
    <string name="notification_load_operation_error">Load operation error : %s</string>
    <string name="notification_success_channel_name">Load process</string>
    <string name="notification_success_channel_description">Violet Note load process</string>
    <string name="notification_failure_channel_name">Load process failure</string>
    <string name="notification_failure_channel_description">Violet Note load process failure</string>
    <string-array name="hint_action_entries">
        <item>Add &#8230;</item>
        <item>Edit &#8230;</item>
        <item>Edit &#8230;</item>
    </string-array>
    <string name="hint_action_add">Add &#8230;</string>
    <string name="hint_action_edit">Edit &#8230;</string>
    <string name="ui_text_search_system">System</string>
    <string name="ui_text_search_user">User</string>
    <string name="ui_text_pass_note">Password notes</string>
    <string name="ui_text_basic_note">Basic notes</string>
    <string name="ui_image_type_description">Type</string>
    <string name="ui_image_encrypted_description">Is encrypted</string>
    <string name="ui_image_cancel_description">Cancel</string>
    <string name="ui_image_list_description">List</string>
    <string name="ui_image_calendar_description">Calendar</string>
    <string name="title_activity_basic_note_group">Basic note groups</string>
    <string name="title_activity_basic_note_group_add">Add group</string>
    <string name="title_activity_basic_note_group_edit">Edit group %s</string>
    <string name="title_activity_basic_note">Basic note</string>
    <string name="title_activity_basic_note_add">Add note</string>
    <string name="title_activity_basic_note_edit">Basic note edit</string>
    <string name="title_activity_basic_note_checked_item">Checked note</string>
    <string name="title_activity_basic_note_named_item">Named note</string>
    <string name="title_activity_basic_note_named_item_add">Add named note</string>
    <string name="title_activity_basic_note_named_item_edit">Edit named note %s</string>
    <string name="title_activity_basic_note_value">Values</string>
    <string name="title_activity_basic_history_event_co_item">%s checkout events history</string>
    <string name="title_activity_basic_history_event_named_item">%s events history</string>
    <string name="title_activity_password_category">Note category</string>
    <string name="title_activity_password_note">Note list</string>
    <string name="title_activity_password_note_details">Note details</string>
    <string name="title_activity_password_note_search">Note search</string>
    <string name="title_activity_settings">Settings</string>
    <string name="title_activity_file_chooser">File chooser</string>
    <plurals name="title_multiple_items_selected">
        <item quantity="one">One item selected</item>
        <item quantity="other">%d items selected</item>
    </plurals>
    <string name="ui_note_type_checked">Checked</string>
    <string name="ui_note_type_named">Named</string>
    <string name="ui_note_type_named_password_protected">Named (password protected)</string>
    <string name="ui_note_title">Title</string>
    <string name="ui_note_value">Value</string>
    <string name="ui_name_value_title">Name and value</string>
    <string name="ui_dialog_title_info">Information</string>
    <string name="ui_dialog_title_error">Error</string>
    <string name="ui_dialog_title_confirmation">Confirmation</string>
    <string name="ui_dialog_button_login">Login</string>
    <string name="ui_dialog_button_logout">Logout</string>
    <string name="ui_question_are_you_sure">Are you sure?</string>
    <string name="ui_question_delete_item_are_you_sure">%s will be deleted!\nAre you sure?</string>
    <plurals name="ui_question_delete_items_are_you_sure">
        <item quantity="one">One item will be deleted!\nAre you sure?</item>
        <item quantity="other">%d items will be deleted!\nAre you sure?</item>
    </plurals>
    <plurals name="ui_question_selected_note_items_move_to_other_note">
        <item quantity="one">Are you sure to move one note item to other note: %s ?</item>
        <item quantity="other">Are you sure to move %1$d note items to other note: %2$s ?</item>
    </plurals>
    <string name="ui_display_options_show_total">Show total</string>
    <string name="ui_display_options_show_unchecked">Show unchecked</string>
    <string name="ui_display_options_show_checked">Show checked</string>
</resources>