<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/move_up"
        android:title="@string/action_move_up"
        app:showAsAction="ifRoom"
        />
    <item
        android:id="@+id/move_top"
        android:title="@string/action_move_top"
        app:showAsAction="ifRoom"
        />
    <item
        android:id="@+id/move_down"
        android:title="@string/action_move_down"
        app:showAsAction="ifRoom"
        />
    <item
        android:id="@+id/move_bottom"
        android:title="@string/action_move_bottom"
        app:showAsAction="ifRoom"
        />
    <item
        android:id="@+id/priority_up"
        android:title="@string/action_priority_up"
        app:showAsAction="ifRoom"
        />
    <item
        android:id="@+id/priority_down"
        android:title="@string/action_priority_down"
        app:showAsAction="ifRoom"
        />
</menu>