<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">
    <PreferenceCategory
        android:title="@string/pref_title_data"
        android:layout="@layout/preferences_category"
        >
        <Preference
            android:key="pref_source_type"
            android:title="@string/pref_title_source_type"
            />
        <Preference
            android:key="pref_source_path"
            android:title="@string/pref_title_source_path"
            />
        <Preference
            android:key="pref_load"
            android:title="@string/pref_title_load"
            />
    </PreferenceCategory>
    <PreferenceCategory
        android:title="@string/pref_title_account"
        android:layout="@layout/preferences_category"
        >
        <Preference
            android:key="pref_account_dropbox"
            android:title="@string/pref_title_account_dropbox"
            />
    </PreferenceCategory>
    <PreferenceCategory
        android:title="@string/pref_title_interface"
        android:layout="@layout/preferences_category"
        >
        <CheckBoxPreference
            android:key="hide_category_details"
            android:title="@string/pref_interface_hide_category_details"
            />

    </PreferenceCategory>

</PreferenceScreen>