<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/edit_value"
        android:title="@string/action_edit_value"
        android:icon="@drawable/ic_action_tag"
        app:showAsAction="ifRoom"
        />
    <item
        android:id="@+id/delete"
        android:title="@string/action_delete"
        android:icon="@drawable/ic_action_trash"
        app:showAsAction="ifRoom"
        />
    <item
        android:id="@+id/select_all"
        android:title="@string/action_select_all"
        android:icon="@drawable/ic_check_box"
        app:showAsAction="ifRoom"
        />
    <item
        android:id="@+id/edit"
        android:title="@string/action_edit"
        android:icon="@drawable/ic_action_edit"
        app:showAsAction="ifRoom"
        />
</menu>