<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/nav_graph"
    app:startDestination="@id/PassDataCategoryFragment">

    <fragment
        android:id="@+id/PassDataCategoryFragment"
        android:name="com.romanpulov.violetnote.view.PassDataCategoryFragment"
        android:label="@string/title_activity_password_category"
        tools:layout="@layout/fragment_pass_data_category">

        <action
            android:id="@+id/action_PassDataCategoryFragment_to_PassDataNoteFragment"
            app:destination="@id/PassDataNoteFragment" />
        <action
            android:id="@+id/action_PassDataCategoryFragment_to_PassDataSearchResultFragment"
            app:destination="@id/PassDataSearchResultFragment" />
    </fragment>

    <fragment
        android:id="@+id/PassDataNoteFragment"
        android:name="com.romanpulov.violetnote.view.PassDataNoteFragment"
        android:label="@string/title_activity_password_note"
        tools:layout="@layout/fragment_pass_data_note">

        <action
            android:id="@+id/action_PassDataNoteFragment_to_PassDataSearchResultFragment"
            app:destination="@id/PassDataSearchResultFragment" />
        <action
            android:id="@+id/action_PassDataNoteFragment_to_PassDataNoteDetailsFragment"
            app:destination="@id/PassDataNoteDetailsFragment" />
    </fragment>

    <fragment
        android:id="@+id/PassDataSearchResultFragment"
        android:name="com.romanpulov.violetnote.view.PassDataSearchResultFragment"
        android:label="@string/title_activity_password_note_search"
        tools:layout="@layout/fragment_pass_data_note">

        <action
            android:id="@+id/action_PassDataSearchResultFragment_to_PassDataNoteDetailsFragment"
            app:destination="@id/PassDataNoteDetailsFragment" />
    </fragment>

    <fragment
        android:id="@+id/PassDataNoteDetailsFragment"
        android:name="com.romanpulov.violetnote.view.PassDataNoteDetailsFragment"
        android:label="@string/title_activity_password_note_details"
        tools:layout="@layout/fragment_pass_data_note">

    </fragment>
</navigation>