<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:paddingBottom="@dimen/activity_vertical_margin"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin"
>
    <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:id="@+id/title_edit_text"
            android:textCursorDrawable="@null"
            android:maxLines="1"
            android:inputType="textCapSentences"
            android:hint="@string/hint_title"
            tools:ignore="AutoFill"
    />

    <Spinner
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/text_margin"
            android:layout_gravity="center_vertical"
            android:id="@+id/img_selector"
    />

    <CheckBox
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/text_margin"
            android:id="@+id/show_total"
            android:text="@string/ui_display_options_show_total"
    />

    <CheckBox
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/text_margin"
            android:id="@+id/show_unchecked"
            android:text="@string/ui_display_options_show_unchecked"
    />

    <CheckBox
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/text_margin"
            android:id="@+id/show_checked"
            android:text="@string/ui_display_options_show_checked"
    />

    <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/text_margin"
            android:id="@+id/ok_button"
            android:background="@drawable/list_selector"
            android:text="@android:string/ok"
            android:onClick="okButtonClick"
    />
</LinearLayout>
