<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_marginTop="@dimen/text_margin"
    android:id="@+id/add_layout"
    android:background="@color/windowBackgroundLighter"
    >

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/colorAccent"
        android:id="@+id/separator"
        />

    <ImageButton
        android:layout_width="@dimen/search_button_size"
        android:layout_height="@dimen/search_button_size"
        android:id="@+id/cancel_button"
        android:layout_alignParentRight="true"
        android:layout_centerVertical="true"
        android:src="@drawable/ic_action_cancel"
        android:background="@drawable/list_lighter_selector"
        android:contentDescription="@string/ui_image_cancel_description"
        />

    <ImageButton
        android:layout_width="@dimen/search_button_size"
        android:layout_height="@dimen/search_button_size"
        android:id="@+id/list_button"
        android:layout_toLeftOf="@+id/cancel_button"
        android:layout_alignTop="@+id/cancel_button"
        android:layout_centerVertical="true"
        android:src="@drawable/ic_action_list"
        android:background="@drawable/list_lighter_selector"
        android:contentDescription="@string/ui_image_list_description"
        android:visibility="gone"
        />


    <AutoCompleteTextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/add_edit_text"
        android:layout_toLeftOf="@id/list_button"
        android:inputType="textCapSentences"
        android:layout_centerVertical="true"
        android:hint="@string/hint_add"
        android:textCursorDrawable="@null"
        android:imeOptions="actionGo"
        />

</RelativeLayout>